# Eddy-for-GitHub

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
app/: __main__.py  ai.py  ai_org_triage_prompt.md  ai_repo_triage_prompt.md  ai_system_prompt.md  ai_user_triage_prompt.md  auth.py  db.py  events.py  ghmd.py  github.py  oauth.py  poll.py  settings.py  web.py
config/: preferences.example.md  settings.example.toml
templates/: _entity_summary.html  _icons.html  _macros.html  _mutekinds_menu.html  _row.html  _snooze_menu.html  _table.html  _timeline_event.html  _timeline_list.html  _user_summary.html  base.html  index.html
